// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleCard > 横レイアウトで正しく表示される 1`] = `
<DocumentFragment>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm group overflow-hidden transition-all pt-0 hover:shadow-lg"
    data-slot="card"
  >
    <a
      class="space-y-4 flex items-start gap-4"
      href="/test-article"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
        data-slot="card-header"
      >
        <div
          data-radix-aspect-ratio-wrapper=""
          style="position: relative; width: 100%; padding-bottom: 42.857142857142854%;"
        >
          <div
            class="relative overflow-hidden w-32 flex-shrink-0"
            data-slot="aspect-ratio"
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          >
            <img
              alt="テスト記事タイトル"
              class="h-full w-full object-cover transition-transform group-hover:scale-105"
              loading="lazy"
              src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=200&q=80"
            />
            <div
              class="absolute inset-0 bg-black/0 transition-colors group-hover:bg-black/10"
            />
          </div>
        </div>
      </div>
      <div
        class="px-6 space-y-2 flex-grow"
        data-slot="card-content"
      >
        <h3
          class="mb-2 font-semibold leading-tight group-hover:text-primary transition-colors"
        >
          テスト記事タイトル
        </h3>
        <div
          class="flex items-center justify-end"
        >
          <span
            class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
            data-slot="badge"
          >
            テクノロジー
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ArticleCard > 縦レイアウト（デフォルト）で正しく表示される 1`] = `
<DocumentFragment>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm group overflow-hidden transition-all pt-0 hover:shadow-lg"
    data-slot="card"
  >
    <a
      class="block space-y-4"
      href="/test-article"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
        data-slot="card-header"
      >
        <div
          data-radix-aspect-ratio-wrapper=""
          style="position: relative; width: 100%; padding-bottom: 42.857142857142854%;"
        >
          <div
            class="relative w-full overflow-hidden"
            data-slot="aspect-ratio"
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          >
            <img
              alt="テスト記事タイトル"
              class="h-full w-full object-cover transition-transform group-hover:scale-105"
              loading="lazy"
              src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=200&q=80"
            />
            <div
              class="absolute inset-0 bg-black/0 transition-colors group-hover:bg-black/10"
            />
          </div>
        </div>
      </div>
      <div
        class="px-6 space-y-2"
        data-slot="card-content"
      >
        <h3
          class="mb-2 font-semibold leading-tight group-hover:text-primary transition-colors"
        >
          テスト記事タイトル
        </h3>
        <div
          class="flex items-center justify-end"
        >
          <span
            class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
            data-slot="badge"
          >
            テクノロジー
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
